# olymp-tracker

./: .gitignore  README.md  olymp-tracker.py  olympiad_tracker.db  pyproject.toml
core/: analysis.py  crud.py  models.py
pages/: 1_Groups_Lessons.py  2_Students.py  3_Conduit.py  4_Events.py  5_Olympiads.py
scripts/: seed_database.py
